@@ -439,3 +439,4 @@ template<class T> void AppendVector(std::vector<T>& Dest, std::vector<T>& Tail, 
  * Version info. Returns a human readable version string, like "1.7.0".
  ******************************************************************************/
 std::string RepfuncVersion(void);
+
