@@ -30,4 +30,7 @@
  * add wget()
  These add-on's should not break anything.
    -> API-compatible, but new functionality, 1.10.0 -> 1.11.0
+ * Makefile: allow CXX and AR to be overwritten.
+   This change was requested a while ago by heitbaum, see PR #4 to allow cross
+   compile.
 
